--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@cloudflare/workers-types": "^4.20240903.0",
 		"browser-image-compression": "^2.0.2",
 		"cloudflare": "^3.5.0",
+		"firebase": "^11.4.0",
 		"google-auth-library": "^9.14.1",
 		"jose": "^5.8.0",
 		"jsonwebtoken": "^9.0.2",
